fixed whitespace and issue with scale

--- a/styles.css
+++ b/styles.css
@@ -70,5 +70,4 @@ ul {
   }
   #drawing{
       padding: 20px;
-      scale: 200%;
   }
